addons/security/manifests/keycloak/namespace.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: security
