addons/security/manifests/keycloak/windows-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windows-login
  namespace: security
  labels:
    app: windows-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windows-login
  template:
    metadata:
      labels:
        app: windows-login
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: windows-login
          image: ovwebpoc.azurecr.io/windows-login:0.0.2
          workingDir: "%CONTAINER_SANDBOX_MOUNT_POINT%\\bin"            
          command:
            - "%CONTAINER_SANDBOX_MOUNT_POINT%\\bin\\login.exe"
      securityContext:
        windowsOptions:
          hostProcess: true
          runAsUserName: "NT AUTHORITY\\SYSTEM"
      hostNetwork: true
      tolerations:
        - key: "OS"
          operator: "Equal"
          value: "Windows"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/os: windows
