addons/security/manifests/keycloak/oauth2-proxy.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: security
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:8.10.2
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
          command: ["redis-server"]
          args: ["--save", "", "--appendonly", "no"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: security
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: security
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: oauth2-proxy-config
      hostAliases:
        - ip: "172.19.1.100"
          hostnames:
            - "k2s.cluster.local"
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5
          ports:
            - containerPort: 4180
          volumeMounts:
            - name: oauth2-proxy-config
              mountPath: /etc/oauth2-proxy.cfg
              subPath: oauth2-proxy.cfg
          args:
            - --config=/etc/oauth2-proxy.cfg
            - --provider=keycloak
            - --set-xauthrequest
            - --pass-access-token
            - --show-debug-on-error
            - --standard-logging
            - --auth-logging
            - --request-logging
            - --ssl-upstream-insecure-skip-verify
            - --ssl-insecure-skip-verify
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: security
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
---
