addons/security/manifests/keycloak/nginx-gw-ingress-keycloak.yaml
# SPDX-FileCopyrightText: © 2026 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-nginx-gw-cluster-local
  namespace: security
spec:
  parentRefs:
    - name: nginx-cluster-local
      namespace: nginx-gw
      sectionName: https
  hostnames:
    - k2s.cluster.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /keycloak
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Host
                value: k2s.cluster.local
      backendRefs:
        - name: keycloak
          port: 8080
