addons/security/manifests/keycloak/nginx-gw-ingress-oauth2-proxy.yaml
# SPDX-FileCopyrightText: © 2026 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-nginx-gw-cluster-local
  namespace: security
spec:
  parentRefs:
    - name: nginx-cluster-local
      namespace: nginx-gw
      sectionName: https
  hostnames:
    - k2s.cluster.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Host
                value: k2s.cluster.local
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: oauth2-shared-locations
      backendRefs:
        - name: oauth2-proxy
          port: 4180
