addons/security/manifests/keycloak/nginx-ingress-keycloak.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: security
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k2s.cluster.local
      secretName: k2s-cluster-local-tls
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
