addons/security/manifests/keycloak/nginx-ingress-oauth2-proxy.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: security
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k2s.cluster.local
      secretName: k2s-cluster-local-tls
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
